overflow-x repaired

--- a/Code/styles.css
+++ b/Code/styles.css
@@ -10,6 +10,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Montserrat";
+  box-sizing: border-box;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .header-container {
@@ -20,12 +23,12 @@ body {
   align-items: center;
 }
 
-.header-container > a {
+.hidden {
   display: none;
 }
 
 .container {
-  width: 100vw;
+  width: inherit;
 }
 
 .logo-container {
@@ -75,8 +78,7 @@ p > .bold {
 }
 
 .intro {
-  width: 100vw;
-  min-width: 100vw;
+  width: inherit;
   background-color: #d8d8d8;
   display: flex;
 }
@@ -122,7 +124,7 @@ p > .bold {
 
 .divided-in-two {
   display: flex;
-  width: 100vw;
+  width: inherit;
   box-sizing: border-box;
   overflow: hidden;
 }
@@ -152,10 +154,11 @@ p > .bold {
 }
 
 .right {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   padding-top: 32px;
-  min-width: 40vw;
+
   box-sizing: border-box;
 }
 
@@ -165,7 +168,7 @@ p > .bold {
   padding-bottom: 0.75rem;
   border-bottom: 1px solid #d8d8d8;
   padding-top: 0.75rem;
-  width: 100%;
+  width: 35vw;
 }
 
 .row .media-image {
@@ -223,7 +226,7 @@ p > .bold {
 
 .start-learning {
   background-color: #d8d8d8;
-  width: 100vw;
+  width: inherit;
   box-sizing: border-box;
   margin-top: 32px;
 }
@@ -304,7 +307,7 @@ p > .bold {
 
 footer {
   display: flex;
-  width: 100vw;
+  width: inherit;
   justify-content: flex-end;
   align-items: center;
 }
@@ -335,19 +338,13 @@ footer > ul > li > a:hover {
 
 @media (max-width: 780px) {
   .header-container {
-    text-align: center;
-    width: 100%;
-    margin: auto;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-evenly;
+    margin-left: 20px;
   }
 
-  header {
-    justify-content: space-around;
-  }
-
-  .header-container > a {
+  .header-container > .hidden {
     display: inline-block;
   }
 
@@ -367,6 +364,12 @@ footer > ul > li > a:hover {
 
   .intro {
     flex-direction: column;
+    width: 100vw;
+  }
+
+  .intro-text {
+    padding-right: 0;
+    padding-left: 16px;
   }
 
   .intro img {
